delete local images, add images from interner

--- a/Front-End/templates/addData.html
+++ b/Front-End/templates/addData.html
@@ -7,17 +7,24 @@
     </div>
     <h1 class="title">Practice Handwriting Here</h1>
     <div>
+      <!-- link for image from internet 
+      https://i.redd.it/zjj7lnhbzto91.jpg -> giraffe
+      https://i.redd.it/4ih3ahv5axu91.jpg -> dog
+      https://i.redd.it/4cjkataggkv91.jpg -> dinosor -->
+      <img class="img-animal" src="https://i.redd.it/4ih3ahv5axu91.jpg" alt="dog image"/> 
       <canvas id="canvas" width="200" height="200"></canvas>
     </div>
     <div style="padding: 1rem;">
       
-     <!-- <img class="img-animal" src="../images/zebra.png" alt="zebra image"/> -->
+     
 
+      <!--
       {% if message %}
         <p style="font-size: 0.75rem;">{{message}}</p>
       {% endif %}
       <p style="margin-top: 0.5rem;">Write an uppercase "{{letter.lower()}}"</p>
-      
+      -->
+
     </div>
     <div>
       <form id="add-data-form" action="add-data" method="POST">
