--- a/Front-End/templates/addData.html
+++ b/Front-End/templates/addData.html
@@ -16,13 +16,14 @@
     </div>
     <div style="padding: 1rem;">
       
-     
-
       <!--
       {% if message %}
         <p style="font-size: 0.75rem;">{{message}}</p>
       {% endif %}
       <p style="margin-top: 0.5rem;">Write an uppercase "{{letter.lower()}}"</p>
+
+      for check function
+      <p style="margin-top: 0.5rem;">Oh, thank you for helping me about finding the animal! It's a christmas dog!</p>
       -->
 
     </div>
