--- a/Front-End/templates/index.html
+++ b/Front-End/templates/index.html
@@ -5,7 +5,10 @@
     <h1 class="title">Handwriting Game</h1>
     <div>
       <div class="box">
-        <a class="button is-info" href="/add-data">add data</a>
+        <a class="button is-info" href="/add-data">Start</a>
+        <style>
+          p {text-align: center;}
+        </style>
         <p>Practice handwriting</p>
       </div>
     </div>
